2009-09-28  Murray Cumming  <murrayc@murrayc.com>

	Fix a crash.

	* glom/dialog_existing_or_new.cc: Move some assertions so this works 
	again in non-client-only mode.

2009-09-28  Murray Cumming  <murrayc@murrayc.com>

	client-only mode: Ifdef out unused code.
	
	* glom/dialog_existing_or_new.[h|cc]: Ifdef out unused code for the new 
	document notebook tab in client-only mode.

2009-09-28  Murray Cumming  <murrayc@murrayc.com>

	Maemo: Removed icons from dialogs.
	
	* glom/glom.glade: Comment out icons in our maemo5 branch.

2009-09-28  Murray Cumming  <murrayc@murrayc.com>

	Client-only mode: Change the initial dialog label.
	 
	* glom/dialog_existing_or_new.cc: Constructor: Change the label text if in 
	client-only mode, to avoid mentioning creation of documents.

2009-09-25  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with gtkmm < 2.18.
	
	* glom/utility_widgets/flowtable.cc: Correct the use of 
	GTKMM_MINOR_VERSION to fix the build with older gtkmm versions.

2009-09-25  Michael Hasselmann  <michaelh@openismus.com>

	Import: More code cleanup in tests
	
	* glom/import_csv/csv_parser.cc (set_file_and_start_parsing): Fail on empty
	file uri.
	
	* tests/import/*: Removed the ugly mainloop singleton, among other cleanups.

2009-09-25  Murray Cumming  <murrayc@murrayc-desktop>

	Cleanup.

	* glom/glom.glade: Really revert a bad merge from the maemo5 branch.
	* glom/libglom/connectionpool_backends/postgres_self.cc: Do not have 
	actual newlines in string literals.

2009-09-25  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with gtkmm < 2.18.
	
	* glom/utility_widgets/flowtable.cc: Correct the use of 
	GTKMM_MINOR_VERSION to fix the build with older gtkmm versions.

2009-09-25  Murray Cumming  <murrayc@murrayc-desktop>

	Import tests: Fixed.

	* tests/import/utils.[h|cc]: run_parser_from_buffer(): Added a 
	version that takes a std::string, to make the common case more robust.
	* tests/import/test_parsing.cc: