@@ -68,6 +68,7 @@
           <object class="GtkHButtonBox" id="hbuttonbox3">
             <property name="visible">True</property>
             <property name="layout_style">end</property>
+            <!-- Maemo: Dialogs should have no quit or cancel dialogs since Maemo5:
             <child>
               <object class="GtkButton" id="button_cancel">
                 <property name="label">gtk-close</property>
@@ -83,126 +84,7 @@
                 <property name="position">0</property>
               </packing>
             </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">False</property>
-            <property name="position">1</property>
-          </packing>
-        </child>
-      </object>
-    </child>
-  </object>
-  <object class="GtkWindow" id="window_adddel">
-    <property name="title" translatable="yes">window2</property>
-    <child>
-      <object class="GtkVBox" id="vbox6">
-        <property name="visible">True</property>
-        <property name="spacing">6</property>
-        <child>
-          <object class="GtkScrolledWindow" id="scrolledwindow1">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">automatic</property>
-            <property name="vscrollbar_policy">automatic</property>
-            <property name="shadow_type">in</property>
-            <child>
-              <object class="GtkTreeView" id="treeview">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="reorderable">True</property>
-                <property name="rules_hint">True</property>
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="position">0</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkHButtonBox" id="hbuttonbox4">
-            <property name="visible">True</property>
-            <property name="spacing">6</property>
-            <property name="layout_style">end</property>
-            <child>
-              <object class="GtkButton" id="button_add">
-                <property name="label">gtk-add</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="can_default">True</property>
-                <property name="receives_default">False</property>
-                <property name="use_stock">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkButton" id="button_remove">
-                <property name="label">gtk-remove</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="can_default">True</property>
-                <property name="receives_default">False</property>
-                <property name="use_stock">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">1</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkButton" id="button_edit">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="can_default">True</property>
-                <property name="receives_default">False</property>
-                <child>
-                  <object class="GtkAlignment" id="alignment6">
-                    <property name="visible">True</property>
-                    <property name="xscale">0</property>
-                    <property name="yscale">0</property>
-                    <child>
-                      <object class="GtkHBox" id="hbox2">
-                        <property name="visible">True</property>
-                        <property name="spacing">2</property>
-                        <child>
-                          <object class="GtkImage" id="image2">
-                            <property name="visible">True</property>
-                            <property name="stock">gtk-ok</property>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">False</property>
-                            <property name="position">0</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkLabel" id="label18">
-                            <property name="visible">True</property>
-                            <property name="label" translatable="yes">Edit</property>
-                            <property name="use_underline">True</property>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">False</property>
-                            <property name="position">1</property>
-                          </packing>
-                        </child>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">2</property>
-              </packing>
-            </child>
+            -->
           </object>
           <packing>
             <property name="expand">False</property>
@@ -227,6 +109,7 @@
             <property name="visible">True</property>
             <property name="border_width">12</property>
             <property name="spacing">6</property>
+            <!-- Maemo: No icons in dialogs.
             <child>
               <object class="GtkImage" id="image3">
                 <property name="visible">True</property>
@@ -241,6 +124,7 @@
                 <property name="position">0</property>
               </packing>
             </child>
+            -->
             <child>
               <object class="GtkVBox" id="vbox4">
                 <property name="visible">True</property>
@@ -265,11 +149,6 @@
                   <object class="GtkNotebook" id="existing_or_new_notebook">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <child internal-child="accessible">
-                      <object class="AtkObject" id="existing_or_new_notebook-atkobject">
-                        <property name="AtkObject::accessible-name" translatable="yes">Open or create Document</property>
-                      </object>
-                    </child>
                     <child>
                       <object class="GtkScrolledWindow" id="scrolledwindow2">
                         <property name="visible">True</property>
@@ -282,11 +161,6 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                            <child internal-child="accessible">
-                              <object class="AtkObject" id="existing_or_new_existing_treeview-atkobject">
-                                <property name="AtkObject::accessible-name" translatable="yes">Open Existing Document</property>
-                              </object>
-                            </child>
                           </object>
                         </child>
                       </object>
@@ -313,11 +187,6 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                            <child internal-child="accessible">
-                              <object class="AtkObject" id="existing_or_new_new_treeview-atkobject">
-                                <property name="AtkObject::accessible-name" translatable="yes">Create New Document</property>
-                              </object>
-                            </child>
                           </object>
                         </child>
                       </object>
@@ -355,20 +224,7 @@
           <object class="GtkHButtonBox" id="dialog-action_area1">
             <property name="visible">True</property>
             <property name="layout_style">end</property>
-            <child>
-              <object class="GtkButton" id="helpbutton1">
-                <property name="label">gtk-help</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="use_stock">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
+            <!-- Maemo: Dialogs should have no quit or cancel dialogs since Maemo5:
             <child>
               <object class="GtkButton" id="cancelbutton1">
                 <property name="label">gtk-quit</property>
@@ -381,9 +237,10 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="position">1</property>
+                <property name="position">0</property>
               </packing>
             </child>
+            -->
             <child>
               <object class="GtkButton" id="existing_or_new_button_select">
                 <property name="label" translatable="yes">_Select</property>
@@ -395,7 +252,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="position">2</property>
+                <property name="position">1</property>
               </packing>
             </child>
           </object>
@@ -408,8 +265,9 @@
       </object>
     </child>
     <action-widgets>
-      <action-widget response="-11">helpbutton1</action-widget>
+      <!-- Maemo: Dialogs should have no quit or cancel dialogs since Maemo5:
       <action-widget response="-7">cancelbutton1</action-widget>
+      -->
       <action-widget response="0">existing_or_new_button_select</action-widget>
     </action-widgets>
   </object>
@@ -424,6 +282,7 @@
             <property name="visible">True</property>
             <property name="border_width">12</property>
             <property name="spacing">6</property>
+            <!-- Maemo: No icons in dialogs.
             <child>
               <object class="GtkImage" id="image12">
                 <property name="visible">True</property>
@@ -438,6 +297,7 @@
                 <property name="position">0</property>
               </packing>
             </child>
+            -->
             <child>
               <object class="GtkVBox" id="vbox28">
                 <property name="visible">True</property>
@@ -488,11 +348,6 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="invisible_char">&#x2022;</property>
-                        <child internal-child="accessible">
-                          <object class="AtkObject" id="entry_host-atkobject">
-                            <property name="AtkObject::accessible-name" translatable="yes">Host</property>
-                          </object>
-                        </child>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -508,11 +363,6 @@
                         <property name="visibility">False</property>
                         <property name="invisible_char">&#x2022;</property>
                         <property name="activates_default">True</property>
-                        <child internal-child="accessible">
-                          <object class="AtkObject" id="entry_password-atkobject">
-                            <property name="AtkObject::accessible-name" translatable="yes">Password</property>
-                          </object>
-                        </child>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -527,11 +377,6 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="invisible_char">&#x2022;</property>
-                        <child internal-child="accessible">
-                          <object class="AtkObject" id="entry_user-atkobject">
-                            <property name="AtkObject::accessible-name" translatable="yes">User</property>
-                          </object>
-                        </child>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -611,11 +456,6 @@
                         <property name="visible">True</property>
                         <property name="xalign">0</property>
                         <property name="selectable">True</property>
-                        <child internal-child="accessible">
-                          <object class="AtkObject" id="label_database-atkobject">
-                            <property name="AtkObject::accessible-name" translatable="yes">Database</property>
-                          </object>
-                        </child>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -648,21 +488,7 @@
           <object class="GtkHButtonBox" id="hbuttonbox16">
             <property name="visible">True</property>
             <property name="layout_style">end</property>
-            <child>
-              <object class="GtkButton" id="button11">
-                <property name="label">gtk-help</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="can_default">True</property>
-                <property name="receives_default">False</property>
-                <property name="use_stock">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
+            <!-- Maemo: Dialogs should have no quit or cancel dialogs since Maemo5:
             <child>
               <object class="GtkButton" id="button12">
                 <property name="label">gtk-cancel</property>
@@ -675,9 +501,10 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="position">1</property>
+                <property name="position">0</property>
               </packing>
             </child>
+            -->
             <child>
               <object class="GtkButton" id="button13">
                 <property name="visible">True</property>
@@ -725,7 +552,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="position">2</property>
+                <property name="position">1</property>
               </packing>
             </child>
           </object>
@@ -738,7 +565,6 @@
       </object>
     </child>
     <action-widgets>
-      <action-widget response="-11">button11</action-widget>
       <action-widget response="-6">button12</action-widget>
       <action-widget response="-5">button13</action-widget>
     </action-widgets>
@@ -888,6 +714,7 @@
           <object class="GtkHButtonBox" id="hbuttonbox39">
             <property name="visible">True</property>
             <property name="layout_style">end</property>
+             <!-- Maemo: Dialogs should have no quit or cancel dialogs since Maemo5:
             <child>
               <object class="GtkButton" id="button_cancel">
                 <property name="label">gtk-cancel</property>
@@ -903,6 +730,7 @@
                 <property name="position">0</property>
               </packing>
             </child>
+            -->
           </object>
           <packing>
             <property name="expand">False</property>
@@ -913,7 +741,9 @@
       </object>
     </child>
     <action-widgets>
+      <!-- Maemo: Dialogs should have no quit or cancel dialogs since Maemo5:
       <action-widget response="-6">button_cancel</action-widget>
+      -->
     </action-widgets>
   </object>
   <object class="GtkWindow" id="window_progress">
@@ -947,7 +777,7 @@
       </object>
     </child>
   </object>
-  <object class="GtkWindow" id="window_main">
+  <object class="HildonWindow" id="window_main">
     <property name="title" translatable="yes">Glom</property>
     <property name="default_width">900</property>
     <property name="default_height">700</property>
@@ -1497,6 +1327,7 @@
           <object class="GtkHButtonBox" id="dialog-action_area5">
             <property name="visible">True</property>
             <property name="layout_style">end</property>
+            <!-- Maemo: Dialogs should have no quit or cancel dialogs since Maemo5:
             <child>
               <object class="GtkButton" id="import_csv_cancel_button">
                 <property name="label">gtk-cancel</property>
@@ -1511,6 +1342,7 @@
                 <property name="position">0</property>
               </packing>
             </child>
+            -->
             <child>
               <object class="GtkButton" id="import_csv_import_button">
                 <property name="visible">True</property>
@@ -1548,20 +1380,6 @@
                 <property name="position">1</property>
               </packing>
             </child>
-            <child>
-              <object class="GtkButton" id="import_csv_help_button">
-                <property name="label">gtk-help</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="use_stock">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">2</property>
-              </packing>
-            </child>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -1572,9 +1390,10 @@
       </object>
     </child>
     <action-widgets>
+      <!-- Maemo: Dialogs should have no quit or cancel dialogs since Maemo5:
       <action-widget response="-6">import_csv_cancel_button</action-widget>
+      -->
       <action-widget response="-3">import_csv_import_button</action-widget>
-      <action-widget response="-11">import_csv_help_button</action-widget>
     </action-widgets>
   </object>
   <object class="GtkDialog" id="dialog_data_invalid_format">
@@ -1587,6 +1406,7 @@
             <property name="visible">True</property>
             <property name="border_width">12</property>
             <property name="spacing">6</property>
+            <!-- Maemo: No icons in dialogs.
             <child>
               <object class="GtkImage" id="image4">
                 <property name="visible">True</property>
@@ -1601,6 +1421,7 @@
                 <property name="position">0</property>
               </packing>
             </child>
+            -->
             <child>
               <object class="GtkVBox" id="vbox18">
                 <property name="visible">True</property>
@@ -1653,21 +1474,6 @@ The data in the field was not recognized. Please try to correct the data or reve
             <property name="visible">True</property>
             <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="button1">
-                <property name="label">gtk-help</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="can_default">True</property>
-                <property name="receives_default">False</property>
-                <property name="use_stock">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
               <object class="GtkButton" id="button_revert">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -1713,7 +1519,7 @@ The data in the field was not recognized. Please try to correct the data or reve
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="position">1</property>
+                <property name="position">0</property>
               </packing>
             </child>
             <child>
@@ -1729,7 +1535,7 @@ The data in the field was not recognized. Please try to correct the data or reve
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="position">2</property>
+                <property name="position">1</property>
               </packing>
             </child>
           </object>
@@ -1742,7 +1548,6 @@ The data in the field was not recognized. Please try to correct the data or reve
       </object>
     </child>
     <action-widgets>
-      <action-widget response="-11">button1</action-widget>
       <action-widget response="2">button_revert</action-widget>
       <action-widget response="-5">button4</action-widget>
     </action-widgets>
@@ -1811,6 +1616,7 @@ The data in the field was not recognized. Please try to correct the data or reve
           <object class="GtkHButtonBox" id="dialog-action_area7">
             <property name="visible">True</property>
             <property name="layout_style">end</property>
+            <!-- Maemo: We want a cancel button on this progress dialog even on Maemo. -->
             <child>
               <object class="GtkButton" id="import_csv_progress_cancel_button">
                 <property name="label">gtk-cancel</property>
@@ -1884,6 +1690,7 @@ The data in the field was not recognized. Please try to correct the data or reve
           <object class="GtkHButtonBox" id="dialog-action_area7">
             <property name="visible">True</property>
             <property name="layout_style">end</property>
+            <!-- Maemo: We want a cancel button on this progress dialog even on Maemo. -->
             <child>
               <object class="GtkButton" id="button1">
                 <property name="label">gtk-cancel</property>
